# libcamera-rs

libcamera/: Cargo.toml
libcamera-meta/: Cargo.toml
libcamera-sys/: Cargo.toml  build.rs
libcamera-sys/c_api/: controls.cpp  controls.h  logging.h
libcamera-sys/src/: bindings.rs  bindings_cpp.rs  lib.rs
libcamera/versioned_files/0.0.1/: properties.rs
libcamera/versioned_files/0.0.2/: controls.rs
libcamera/versioned_files/0.0.3/: controls.rs
libcamera/versioned_files/0.1.0/: controls.rs  properties.rs
libcamera/versioned_files/0.2.0/: controls.rs  properties.rs
libcamera/versioned_files/0.3.0/: controls.rs
libcamera/versioned_files/0.3.1/: controls.rs
libcamera/versioned_files/0.3.2/: controls.rs
libcamera/versioned_files/0.4.0/: control_ids_core.yaml  control_ids_debug.yaml  control_ids_draft.yaml  control_ids_rpi.yaml  controls.rs  property_ids_core.yaml  property_ids_draft.yaml
